# mod_katachat/routes.py
@@ -1,17 +1,13 @@
-from pdb import set_trace as BP
 
-import os, sys, json
-from datetime import date
+import json, re
 from functools import wraps
 import shortuuid
-import shutil
 import requests
 
-import flask
-from flask import request, Response, jsonify, send_file
-from flask_cors import cross_origin
+from flask import request, Response, send_file
 
 from mod_katachat import app, log, REDIS, tojson
+from mod_katachat.goboard import GoBoard,BLACK,WHITE
 
 # API exception handling
 #--------------------------
@@ -22,7 +18,7 @@ def api_error(f):
         try:
             return f(*args, **kwargs)
         except Exception as e:
-            return {'error':str(e)}, 500 
+            return {'exception':str(e)}, 500 
     return decorated
 
 ### Endpoints
@@ -36,27 +32,111 @@ def start_game():
     REDIS.set(game_id, tojson(data))
     return { 'game_id': game_id }
 
-@app.route('/katachat/get_best_move/<string:game_id>', methods=['GET'])
+@app.route('/katachat/make_move/<string:game_id>/<string:move>', methods=['GET'])
 @api_error
-def get_best_move(game_id):
+def make_move(game_id, move):
+    """ Example: /katachat/make_move/1234/Be4 """
+    data = REDIS.get(game_id) 
+    if not data:
+        return { 'error': 'game_id not found' }, 500
+    data = json.loads(data)
+    move = move.upper().strip()
+    if not re.match(r'[BW][\s]*[a-i][1-9]', move, flags=re.IGNORECASE):
+        return { 'error': f'move {move} not valid' }, 500
+    moves = data['move_seq']
+    prevcol = moves[-1][0] if moves else 'W'
+    nextcol = 'B' if prevcol == 'W' else 'W'
+    if move[0] != nextcol:
+        return { 'error': f'move {move} has wrong color' }, 500
+    moves.append(move)
+    REDIS.set(game_id, tojson(data))
+    resp = {'all_moves': moves}
+    return resp
+
+@app.route('/katachat/undo_last_move/<string:game_id>', methods=['GET'])
+@api_error
+def undo_last_move(game_id):
+    """ Example: /katachat/undo_last_move/1234 """
     data = REDIS.get(game_id) 
     if not data:
         return { 'error': 'game_id not found' }, 500
     data = json.loads(data)
     moves = data['move_seq']
-    res = fwd_to_katago_9(moves)
-    log(res)
+    moves.pop(-1)
+    REDIS.set(game_id, tojson(data))
+    resp = {'all_moves': moves}
+    return resp
+
+@app.route('/katachat/get_all_moves/<string:game_id>', methods=['GET'])
+@api_error
+def get_all_moves(game_id):
+    """ Example: /katachat/get_all_moves/1234 """
+    data = REDIS.get(game_id) 
+    if not data:
+        return { 'error': 'game_id not found' }, 500
+    data = json.loads(data)
+    moves = data['move_seq']
+    resp = {'all_moves': moves}
+    return resp
+
+@app.route('/katachat/get_best_moves/<string:game_id>', methods=['GET'])
+@api_error
+def get_best_moves(game_id):
+    data = REDIS.get(game_id) 
+    if not data:
+        return { 'error': 'game_id not found' }, 500
+    data = json.loads(data)
+    moves = data['move_seq']
+    resp = fwd_to_katago_9(moves)
+    best_moves = resp['diagnostics']['best_ten']
+    return best_moves
+
+@app.route('/katachat/get_score/<string:game_id>', methods=['GET'])
+@api_error
+def get_score(game_id):
+    data = REDIS.get(game_id) 
+    if not data:
+        return { 'error': 'game_id not found' }, 500
+    data = json.loads(data)
+    moves = data['move_seq']
+    resp = fwd_to_katago_9(moves)
+    black_score = resp['diagnostics']['score']
+    black_winprob = resp['diagnostics']['winprob']
+    res = { 'black_score': black_score, 'black_winprob': black_winprob }
     return res
 
-# Helpers
+@app.route('/katachat/print_board/<string:game_id>', methods=['GET'])
+@api_error
+def print_board(game_id):
+    data = REDIS.get(game_id) 
+    if not data:
+        return { 'error': 'game_id not found' }, 500
+    data = json.loads(data)
+    moves = data['move_seq']
+
+    board = GoBoard(9)
+    for move in moves: # 'BE4'
+        color = move[0]
+        move = move[1:]
+        color = BLACK if color == 'B' else WHITE    
+        board.play_move(move,color)
+    diagram = str(board)
+    return { 'diagram': diagram }
+
+### Helpers
 ##################
 
 def fwd_to_katago_9(moves):
     """ 
     Forward request to 9x9 katago server.
+    Moves looks like [ 'Be4', 'W e6', 'bF5' ... ], case insensitive
     """
-    moves = [ m[1] for m in moves ] # we don't need the color
-    args = {'board_size': 9, 'moves': moves}
+    moves = [ x.strip().upper() for x in moves ]
+    moves = [ ( x[0], x[-2:] ) for x in moves ]
+    colors = [ x[0] for x in moves ]
+    moves = [ x[1] for x in moves ]
+
+    args = {'board_size': 9, 'moves': moves, 'config':{'komi':6.5}}
     URL = 'https://katagui.baduk.club/select-move-9/katago_gtp_bot'
     resp = requests.post(URL, json=args)
     try:
@@ -85,7 +165,7 @@ def openapi_spec():
         return Response(text, mimetype="text/yaml")
 
 
-# Utility funcs
+### Utility funcs
 ##################
 
 #------------------
@@ -98,3 +178,4 @@ def get_parms():
     parms = { k:v.strip() for k, v in parms.items()}
     print(f'>>>>>>>>>PARMS:{parms}')
     return parms
+
